# ai-memory-engine

./: .env.example  .gitignore  Dockerfile  LICENSE  PRELAUNCH_AUDIT.md  README.md  alembic.ini  docker-compose.yml  init_db.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_fact_lifecycle_and_api_key_nullable.py  0003_add_slot_hint.py  0004_add_temporal_state.py
app/: __init__.py  config.py  database.py  errors.py  main.py  metrics.py  security.py
app/api/: auth.py  conscious.py  facts.py  ingest.py  recall.py  users.py
app/llm/: __init__.py  providers.py
app/models/: __init__.py
app/schemas/: __init__.py
app/services/: __init__.py  ingestion.py
app/worker/: queue.py  tasks.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatPanel.tsx  ConsciousPanel.tsx  FactsPanel.tsx  Header.tsx  RecallPanel.tsx  SetupPanel.tsx  TabBar.tsx  index.ts
memoire/: __init__.py  client.py  config.py  constants.py  exceptions.py  types.py  utils.py
memoire-playground/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
memoire-playground/src/: App.jsx  index.css
memoire-playground/src/components/: ArchitectureDiagram.jsx  Brain3D.jsx  CTASection.jsx  FeatureSection.jsx  Footer.jsx  Hero.jsx  HeroDemo.jsx  (+8 more)
memoire/wrappers/: __init__.py  openai.py
tests/: test_client_failopen.py  test_dedup_and_recall.py  test_errors.py  test_facts.py  test_sdk.py  test_security.py  test_utils.py
(+40 files in other folders)
