[project]
name = "memoire"
version = "0.1.0"
description = "Python SDK for the Mémoire memory engine"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Memoire Team" }]
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "typing_extensions>=4.7.0",
]

[project.optional-dependencies]
openai = ["openai>=1.30.0"]
anthropic = ["anthropic>=0.25.0"]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.23.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
